--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                 <img src="images/decisions_01.jpg" class="image-in-gallery">
             </a>
             <a href="projects/totem.html" class="filter to-project" data-name="edition">
-                <img src="images/totem_01.jpg" class="image-in-gallery">
+                <img src="images/totem_02.jpg" class="image-in-gallery">
             </a>
             <a href="projects/flv.html" class="filter to-project" data-name="objet">
                 <img src="images/flv_01.jpg" class="image-in-gallery">
             </a>
             <a href="projects/project.html" class="filter to-project" data-name="illustration">
-                <img src="images/placeholder.png" class="image-in-gallery">
+                <img src="images/placeholder.jpg" class="image-in-gallery">
             </a>
         </div>
         <div>
