--- a/projects/decisions.html
+++ b/projects/decisions.html
@@ -25,15 +25,8 @@
             <h2>Preneur de décisions 2000</h2>
         </div>
         <div class="project-gallery">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
+            <img src="../images/decisions_01.jpg" class="project-image">
+            <img src="../images/decisions_02.jpg" class="project-image">
         </div>
     </div>
 </body>
