--- a/projects/flv.html
+++ b/projects/flv.html
@@ -31,15 +31,10 @@
             <h2>L'embarcadère</h2>
         </div>
         <div class="project-gallery">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
+            <img src="../images/flv_01.jpg" class="project-image">
+            <img src="../images/flv_02.jpg" class="project-image">
+            <img src="../images/flv_03.jpg" class="project-image">
+            <img src="../images/flv_04.jpg" class="project-image">
         </div>
     </div>
 </body>
