--- a/projects/project.html
+++ b/projects/project.html
@@ -18,31 +18,22 @@
     <div class="project-container">
         <div class="project-text">
             <p>
-                123 projets est une tradition du DSAA de Boulogne-Billancourt:
-                les trois premières semaines de la deuxième année sont consacrées
-                à la production de petits projets en lien avec l'idée de sujet de mémoire
-                élaborée en fin de première année. À chaque début de semaine,
-                un thème en un mot est annoncé et un projet doit être
-                conceptualisé, réalisé et présenté dans les sept jours.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae tempor nulla, et lacinia justo. Vivamus posuere est metus, sed porttitor leo molestie at. Vestibulum sed sollicitudin sapien. Aliquam arcu lorem, tempor vel nibh ut, eleifend tincidunt odio. Suspendisse in arcu tellus. Nulla aliquet, ex eu commodo mattis, ipsum justo interdum mi, vel condimentum augue sapien hendrerit magna. Donec sit amet efficitur mauris, quis consequat justo. Nunc varius a dolor in commodo. Nam et augue ac neque iaculis iaculis vitae at neque. Mauris sed mi elit.
                 <br class="after-space">
-                Programmation et design d'un site Web en accord avec le thème
-                de la troisième semaine, soit "À la folie". Vous avez gagné est une reprise
-                comique des formulaires en ligne promettant un prix en échange
-                de nos informations personnelles. Les bugs et les critères de réponses
-                farfelus rendent la tâche plus complexe qu'il n'y paraît.
+                Proin euismod, enim et tincidunt fermentum, metus diam malesuada quam, quis fringilla nulla nunc non magna. Nunc semper aliquam urna, vitae placerat purus luctus non. Praesent eget faucibus lectus. Vestibulum molestie mauris tellus, blandit fermentum mauris finibus vel. Donec turpis sem, pellentesque at nibh nec, facilisis consequat arcu. Fusce consectetur lacinia aliquet. Morbi bibendum mattis convallis. Morbi erat erat, ullamcorper at varius non, dignissim quis purus. Nunc erat sem, efficitur cursus dictum ac, hendrerit ut leo. Duis imperdiet nec sem a pulvinar. Quisque posuere tristique est. Donec fringilla ultricies quam. 
             </p>
-            <h2>Vous avez gagné ! – 123 projets</h2>
+            <h2>Placeholder</h2>
         </div>
         <div class="project-gallery">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
+            <img src="../images/placeholder.jpg" class="project-image">
+            <img src="../images/placeholder.jpg" class="project-image">
+            <img src="../images/placeholder.jpg" class="project-image">
+            <img src="../images/placeholder.jpg" class="project-image">
+            <img src="../images/placeholder.jpg" class="project-image">
+            <img src="../images/placeholder.jpg" class="project-image">
+            <img src="../images/placeholder.jpg" class="project-image">
+            <img src="../images/placeholder.jpg" class="project-image">
+            <img src="../images/placeholder.jpg" class="project-image">
         </div>
     </div>
 </body>
