--- a/projects/totem.html
+++ b/projects/totem.html
@@ -34,7 +34,8 @@
             <img src="../images/totem_01.jpg" class="project-image">
             <img src="../images/totem_02.jpg" class="project-image">
             <img src="../images/totem_03.jpg" class="project-image">
-            <img src="../images/placeholder.png" class="project-image">
+            <img src="../images/totem_04.jpg" class="project-image">
+            <img src="../images/totem_05.jpg" class="project-image">
         </div>
     </div>
 </body>
