--- a/index.html
+++ b/index.html
@@ -8,31 +8,49 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <h1>MANON&nbsp;HOARAU</h1>
-        <a href="infos.html">INFOS</a>
-        <svg viewBox="0 0 100 95.11">
-            <polygon points="50 15.08 65.45 0 69.09 21.28 90.45 18.16 80.89 37.52 100 47.55 80.89 57.59 90.45 76.94 69.09 73.83 65.45 95.11 50 80.03 34.55 95.11 30.91 73.83 9.55 76.94 19.11 57.59 0 47.55 19.11 37.52 9.55 18.16 30.91 21.28 34.55 0 50 15.08"/>
-        </svg>
-    </nav>
-    <hr>
-    <div id="marquee">
-        <ul>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-        </ul>
-        <ul>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-        </ul>
-    </div>
-    <hr>
-    <div id="gallery-and-filters-container">
-        <div id="gallery">
+    <header>
+        <nav>
+            <h1>MANON&nbsp;HOARAU</h1>
+            <a href="infos.html">INFOS</a>
+            <svg viewBox="0 0 100 95.11">
+                <polygon points="50 15.08 65.45 0 69.09 21.28 90.45 18.16 80.89 37.52 100 47.55 80.89 57.59 90.45 76.94 69.09 73.83 65.45 95.11 50 80.03 34.55 95.11 30.91 73.83 9.55 76.94 19.11 57.59 0 47.55 19.11 37.52 9.55 18.16 30.91 21.28 34.55 0 50 15.08"/>
+            </svg>
+        </nav>
+        <hr>
+        <div id="marquee">
+            <ul>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+            </ul>
+            <ul>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+            </ul>
+        </div>
+        <hr>
+    </header>
+    <main id="gallery-and-filters-container">
+        <section id="gallery">
             <a href="projects/decisions.html" class="filter to-project" data-name="webdesign">
                 <img src="images/decisions_01.jpg" class="image-in-gallery">
             </a>
@@ -45,18 +63,17 @@
             <a href="projects/project.html" class="filter to-project" data-name="illustration">
                 <img src="images/placeholder.jpg" class="image-in-gallery">
             </a>
-        </div>
-        <div>
+        </section>
+        <aside>
             <p id="filters">
                 <a class="active" data-name="all">tout</a>
                 <a data-name="edition">édition</a>
                 <a data-name="webdesign">webdesign</a>
                 <a data-name="illustration">illustration</a>
-                <a data-name="video">vidéo</a>
                 <a data-name="objet">objet</a>
             </p>
-        </div>
-    </div>
+        </aside>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
