--- a/infos.html
+++ b/infos.html
@@ -15,23 +15,41 @@
         </svg>
     </nav>
     <hr>
-    <div id="marquee">
-        <ul>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-        </ul>
-        <ul>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-            <li>Je sais pas je verrai plus tard</li>
-        </ul>
-    </div>
-    <hr>
-    <div id="infos-container">
-        <div>
+    <header>
+        <div id="marquee">
+            <ul>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+            </ul>
+            <ul>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+                <li>Designeuse graphique</li>
+                <li class="wingdings2">Â</li>
+                <li>Open to work</li>
+                <li class="wingdings2">Â</li>
+            </ul>
+        </div>
+        <hr>
+    </header>
+    <section id="infos-container">
+        <article>
             <h2>Formation</h2>
             <p>
                 <span class="bold-text">2026 | Post-Diplôme Digital Média Lab</span>
@@ -46,21 +64,21 @@
                 <br>
                 École Léonard-de-Vinci - Montaigu&nbsp;(85)
             </p>
-        </div>
-        <div>
+        </article>
+        <article>
             <h2>Expérience</h2>
             <p>
                 <span class="bold-text">2025-2026 | Graphiste • Community manageuse</span>
                 <br>
-                Université Paris Cité | 8&nbsp;mois, Paris&nbsp;(75)
+                Pôle culture de&nbsp;l'Université Paris Cité | 8&nbsp;mois, Paris&nbsp;(75)
                 <br class="after-space">
                 <span class="bold-text">2025 | Graphiste • Exposante</span>
                 <br>
-                Biennale internationale du design | 2&nbsp;semaines, Saint-Étienne&nbsp;(42)
+                Le design des communs – Biennale internationale du&nbsp;design de&nbsp;Saint-Étienne | 2&nbsp;semaines, Saint-Étienne&nbsp;(42)
                 <br class="after-space">
                 <span class="bold-text">2024 | Graphiste • Exposante • Médiatrice</span>
                 <br>
-                Salon Page(s) | 3&nbsp;semaines, Paris&nbsp;(75)
+                Éditions ++ – Salon Page(s) | 3&nbsp;semaines, Paris&nbsp;(75)
                 <br class="after-space">
                 <span class="bold-text">2024 | Graphiste</span>
                 <br>
@@ -68,7 +86,7 @@
                 <br class="after-space">
                 <span class="bold-text">2024 | Graphiste • Exposante • Médiatrice</span>
                 <br>
-                Fondation Louis Vuitton | 4&nbsp;mois, Paris&nbsp;(75)
+                FLV Lab – Fondation Louis Vuitton | 4&nbsp;mois, Paris&nbsp;(75)
                 <br class="after-space">
                 <span class="bold-text">2022 | Assistante • Relieuse</span>
                 <br>
@@ -80,19 +98,19 @@
                 <br class="after-space">
                 <span class="bold-text">2020 | Graphiste</span>
                 <br>
-                Agence Kocka | 2&nbsp;semaines, Le Mans&nbsp;(72)
+                Agence Kocka | 2&nbsp;semaines, Le&nbsp;Mans&nbsp;(72)
             </p>
-        </div>
-        <div>
+        </article>
+        <article>
             <h2>Contact</h2>
             <p>
                 <span class="wingdings">- </span>Issy-les-Moulineaux&nbsp;(92)
                 <br>
-                <span class="wingdings">* </span>manon.hoarau.amacv@gmail.com
+                <span class="wingdings">* </span><a href="mailto:manon.hoarau.amacv@gmail.com" class="link">manon.hoarau.amacv@gmail.com</a>
                 <br>
-                <span class="wingdings2">' </span>06&#8201;45&#8201;37&#8201;01&#8201;53
+                <span class="wingdings2">' </span>+33&#8201;6&#8201;45&#8201;37&#8201;01&#8201;53
             </p>
-        </div>
-    </div>
+        </article>
+    </section>
 </body>
 </html>
