--- a/projects/decisions.html
+++ b/projects/decisions.html
@@ -15,19 +15,19 @@
         </svg>
     </nav>
     <hr class="project-line">
-    <div class="project-container">
-        <div class="project-text">
+    <section class="project-container">
+        <article class="project-text">
             <p>
                 Programmation et&nbsp;design d'un&nbsp;site Web en&nbsp;accord avec le&nbsp;thème de&nbsp;la&nbsp;première semaine, soit "Lourd / Léger". Preneur de&nbsp;decisions 2000 a&nbsp;été&nbsp;pensé pour enlever le&nbsp;poids des&nbsp;choix du&nbsp;quotidien en&nbsp;laissant le&nbsp;dernier mot au&nbsp;hasard. Entrer une&nbsp;question donnera une&nbsp;réponse composée d'une&nbsp;phrase et&nbsp;d'un&nbsp;signe. Inspiré du&nbsp;trigramme chinois que l'on&nbsp;retrouve dans&nbsp;la&nbsp;technique divinatoire du&nbsp;Yi King, le&nbsp;signe accompagne la&nbsp;prise de&nbsp;décision et&nbsp;peut donner lieu à&nbsp;toutes sortes d'interprétations personnelles.
                 <br class="after-space">
-                <a href="https://manon-bip.github.io/preneur-de-decisions-2000/" target="_blank">> <span class="project-link">Tester Preneur de décisions 2000</span> <</a>
+                <a href="https://manon-bip.github.io/preneur-de-decisions-2000/" target="_blank" class="project-link">Tester</a>
             </p>
             <h2>Preneur de décisions 2000</h2>
-        </div>
-        <div class="project-gallery">
+        </article>
+        <aside class="project-gallery">
             <img src="../images/decisions_01.jpg" class="project-image">
             <img src="../images/decisions_02.jpg" class="project-image">
-        </div>
-    </div>
+        </aside>
+    </section>
 </body>
 </html>
