--- a/projects/flv.html
+++ b/projects/flv.html
@@ -15,8 +15,8 @@
         </svg>
     </nav>
     <hr class="project-line">
-    <div class="project-container">
-        <div class="project-text">
+    <section class="project-container">
+        <article class="project-text">
             <p>
                 Imagination d'un&nbsp;dispositif&nbsp;de médiation culturelle pour&nbsp;la&nbsp;période inter-exposition de&nbsp;la&nbsp;Fondation Louis Vuitton. Première et&nbsp;dernière étape d'une&nbsp;balade modulaire et&nbsp;ludique au&nbsp;sein du&nbsp;bâtiment.
                 <br class="after-space">
@@ -29,13 +29,13 @@
                 </span>
             </p>
             <h2>L'embarcadère</h2>
-        </div>
-        <div class="project-gallery">
+        </article>
+        <aside class="project-gallery">
             <img src="../images/flv_01.jpg" class="project-image">
             <img src="../images/flv_02.jpg" class="project-image">
             <img src="../images/flv_03.jpg" class="project-image">
             <img src="../images/flv_04.jpg" class="project-image">
-        </div>
-    </div>
+        </aside>
+    </section>
 </body>
 </html>
