--- a/projects/totem.html
+++ b/projects/totem.html
@@ -15,8 +15,8 @@
         </svg>
     </nav>
     <hr class="project-line">
-    <div class="project-container">
-        <div class="project-text">
+    <section class="project-container">
+        <article class="project-text">
             <p>
                 Engagement dans la&nbsp;démarche de&nbsp;macro-projet avec une&nbsp;production libre qui regroupe et&nbsp;met en&nbsp;avant différents intérêts personnels. Remise en&nbsp;question et&nbsp;détournement du&nbsp;concept de&nbsp;normes esthétiques dans&nbsp;une&nbsp;pratique artistique, ici, la&nbsp;photographie. Ton&nbsp;absurde et&nbsp;humoristique, photographies à&nbsp;l'aspect volontairement amateur.
                 <br class="after-space">
@@ -24,19 +24,15 @@
                     Album photo A6 de&nbsp;huit pages reliées à&nbsp;la main. Impression sur&nbsp;papiers marron, violet et&nbsp;calque. Découpage et&nbsp;façonnage de&nbsp;pochettes à&nbsp;la&nbsp;main. Sticker violet découpé avec&nbsp;une&nbsp;perforatrice. Vignettes autocollantes et&nbsp;trombone jaune.
                 </span>
             </p>
-            <h2>
-                Le guide ultime
-                <br>
-                de&nbsp;la&nbsp;photo réussie
-            </h2>
-        </div>
-        <div class="project-gallery">
+            <h2>Le guide ultime<br>de&nbsp;la&nbsp;photo réussie</h2>
+        </article>
+        <aside class="project-gallery">
             <img src="../images/totem_01.jpg" class="project-image">
             <img src="../images/totem_02.jpg" class="project-image">
             <img src="../images/totem_03.jpg" class="project-image">
             <img src="../images/totem_04.jpg" class="project-image">
             <img src="../images/totem_05.jpg" class="project-image">
-        </div>
-    </div>
+        </aside>
+    </section>
 </body>
 </html>
