--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Manon Hoarau">
+    <meta name="description" content="Personal website">
+    <meta name="keywords" content="Design, Graphic design, Design graphique, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
     <title>Manon Hoarau</title>
     <link rel="icon" type="image/x-icon" href="">
     <link rel="stylesheet" href="styles.css">
