--- a/projects/project.html
+++ b/projects/project.html
@@ -8,23 +8,25 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body class="project-page">
-    <nav class="project-menu">
-        <a href="../index.html"><span class="wingdings">Ã</span></a>
-        <svg viewBox="0 0 100 95.11" class="project-icon">
-            <polygon points="50 15.08 65.45 0 69.09 21.28 90.45 18.16 80.89 37.52 100 47.55 80.89 57.59 90.45 76.94 69.09 73.83 65.45 95.11 50 80.03 34.55 95.11 30.91 73.83 9.55 76.94 19.11 57.59 0 47.55 19.11 37.52 9.55 18.16 30.91 21.28 34.55 0 50 15.08"/>
-        </svg>
-    </nav>
-    <hr class="project-line">
-    <div class="project-container">
-        <div class="project-text">
+    <header>
+        <nav class="project-menu">
+            <a href="../index.html"><span class="wingdings">Ã</span></a>
+            <svg viewBox="0 0 100 95.11" class="project-icon">
+                <polygon points="50 15.08 65.45 0 69.09 21.28 90.45 18.16 80.89 37.52 100 47.55 80.89 57.59 90.45 76.94 69.09 73.83 65.45 95.11 50 80.03 34.55 95.11 30.91 73.83 9.55 76.94 19.11 57.59 0 47.55 19.11 37.52 9.55 18.16 30.91 21.28 34.55 0 50 15.08"/>
+            </svg>
+        </nav>
+        <hr class="project-line">
+    </header>
+    <main class="project-container">
+        <article class="project-text">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae tempor nulla, et lacinia justo. Vivamus posuere est metus, sed porttitor leo molestie at. Vestibulum sed sollicitudin sapien. Aliquam arcu lorem, tempor vel nibh ut, eleifend tincidunt odio. Suspendisse in arcu tellus. Nulla aliquet, ex eu commodo mattis, ipsum justo interdum mi, vel condimentum augue sapien hendrerit magna. Donec sit amet efficitur mauris, quis consequat justo. Nunc varius a dolor in commodo. Nam et augue ac neque iaculis iaculis vitae at neque. Mauris sed mi elit.
                 <br class="after-space">
                 Proin euismod, enim et tincidunt fermentum, metus diam malesuada quam, quis fringilla nulla nunc non magna. Nunc semper aliquam urna, vitae placerat purus luctus non. Praesent eget faucibus lectus. Vestibulum molestie mauris tellus, blandit fermentum mauris finibus vel. Donec turpis sem, pellentesque at nibh nec, facilisis consequat arcu. Fusce consectetur lacinia aliquet. Morbi bibendum mattis convallis. Morbi erat erat, ullamcorper at varius non, dignissim quis purus. Nunc erat sem, efficitur cursus dictum ac, hendrerit ut leo. Duis imperdiet nec sem a pulvinar. Quisque posuere tristique est. Donec fringilla ultricies quam. 
             </p>
             <h2>Placeholder</h2>
-        </div>
-        <div class="project-gallery">
+        </article>
+        <aside class="project-gallery">
             <img src="../images/placeholder.jpg" class="project-image">
             <img src="../images/placeholder.jpg" class="project-image">
             <img src="../images/placeholder.jpg" class="project-image">
@@ -34,7 +36,7 @@
             <img src="../images/placeholder.jpg" class="project-image">
             <img src="../images/placeholder.jpg" class="project-image">
             <img src="../images/placeholder.jpg" class="project-image">
-        </div>
-    </div>
+        </aside>
+    </main>
 </body>
 </html>
