--- a/projects/decisions.html
+++ b/projects/decisions.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body class="project-page">
-    <nav class="project-menu">
-        <a href="../index.html"><span class="wingdings">Ã</span></a>
-        <svg viewBox="0 0 100 95.11" class="project-icon">
-            <polygon points="50 15.08 65.45 0 69.09 21.28 90.45 18.16 80.89 37.52 100 47.55 80.89 57.59 90.45 76.94 69.09 73.83 65.45 95.11 50 80.03 34.55 95.11 30.91 73.83 9.55 76.94 19.11 57.59 0 47.55 19.11 37.52 9.55 18.16 30.91 21.28 34.55 0 50 15.08"/>
-        </svg>
-    </nav>
-    <hr class="project-line">
-    <section class="project-container">
+    <header>
+        <nav class="project-menu">
+            <a href="../index.html"><span class="wingdings">Ã</span></a>
+            <svg viewBox="0 0 100 95.11" class="project-icon">
+                <polygon points="50 15.08 65.45 0 69.09 21.28 90.45 18.16 80.89 37.52 100 47.55 80.89 57.59 90.45 76.94 69.09 73.83 65.45 95.11 50 80.03 34.55 95.11 30.91 73.83 9.55 76.94 19.11 57.59 0 47.55 19.11 37.52 9.55 18.16 30.91 21.28 34.55 0 50 15.08"/>
+            </svg>
+        </nav>
+        <hr class="project-line">
+    </header>
+    <main class="project-container">
         <article class="project-text">
             <p>
                 Programmation et&nbsp;design d'un&nbsp;site Web en&nbsp;accord avec le&nbsp;thème de&nbsp;la&nbsp;première semaine, soit "Lourd / Léger". Preneur de&nbsp;decisions 2000 a&nbsp;été&nbsp;pensé pour enlever le&nbsp;poids des&nbsp;choix du&nbsp;quotidien en&nbsp;laissant le&nbsp;dernier mot au&nbsp;hasard. Entrer une&nbsp;question donnera une&nbsp;réponse composée d'une&nbsp;phrase et&nbsp;d'un&nbsp;signe. Inspiré du&nbsp;trigramme chinois que l'on&nbsp;retrouve dans&nbsp;la&nbsp;technique divinatoire du&nbsp;Yi King, le&nbsp;signe accompagne la&nbsp;prise de&nbsp;décision et&nbsp;peut donner lieu à&nbsp;toutes sortes d'interprétations personnelles.
@@ -28,6 +30,6 @@
             <img src="../images/decisions_01.jpg" class="project-image">
             <img src="../images/decisions_02.jpg" class="project-image">
         </aside>
-    </section>
+    </main>
 </body>
 </html>
