--- a/projects/totem.html
+++ b/projects/totem.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body class="project-page">
-    <nav class="project-menu">
-        <a href="../index.html"><span class="wingdings">Ã</span></a>
-        <svg viewBox="0 0 100 95.11" class="project-icon">
-            <polygon points="50 15.08 65.45 0 69.09 21.28 90.45 18.16 80.89 37.52 100 47.55 80.89 57.59 90.45 76.94 69.09 73.83 65.45 95.11 50 80.03 34.55 95.11 30.91 73.83 9.55 76.94 19.11 57.59 0 47.55 19.11 37.52 9.55 18.16 30.91 21.28 34.55 0 50 15.08"/>
-        </svg>
-    </nav>
-    <hr class="project-line">
-    <section class="project-container">
+    <header>
+        <nav class="project-menu">
+            <a href="../index.html"><span class="wingdings">Ã</span></a>
+            <svg viewBox="0 0 100 95.11" class="project-icon">
+                <polygon points="50 15.08 65.45 0 69.09 21.28 90.45 18.16 80.89 37.52 100 47.55 80.89 57.59 90.45 76.94 69.09 73.83 65.45 95.11 50 80.03 34.55 95.11 30.91 73.83 9.55 76.94 19.11 57.59 0 47.55 19.11 37.52 9.55 18.16 30.91 21.28 34.55 0 50 15.08"/>
+            </svg>
+        </nav>
+        <hr class="project-line">
+    </header>
+    <main class="project-container">
         <article class="project-text">
             <p>
                 Engagement dans la&nbsp;démarche de&nbsp;macro-projet avec une&nbsp;production libre qui regroupe et&nbsp;met en&nbsp;avant différents intérêts personnels. Remise en&nbsp;question et&nbsp;détournement du&nbsp;concept de&nbsp;normes esthétiques dans&nbsp;une&nbsp;pratique artistique, ici, la&nbsp;photographie. Ton&nbsp;absurde et&nbsp;humoristique, photographies à&nbsp;l'aspect volontairement amateur.
@@ -33,6 +35,6 @@
             <img src="../images/totem_04.jpg" class="project-image">
             <img src="../images/totem_05.jpg" class="project-image">
         </aside>
-    </section>
+    </main>
 </body>
 </html>
