--- a/infos.html
+++ b/infos.html
@@ -70,15 +70,15 @@
             <p>
                 <span class="bold-text">2025-2026 | Graphiste • Community manageuse</span>
                 <br>
-                Pôle culture de&nbsp;l'Université Paris Cité | 8&nbsp;mois, Paris&nbsp;(75)
+                Pôle Culture de&nbsp;l'Université Paris Cité | 8&nbsp;mois, Paris&nbsp;(75)
                 <br class="after-space">
                 <span class="bold-text">2025 | Graphiste • Exposante</span>
                 <br>
-                Le design des communs – Biennale internationale du&nbsp;design de&nbsp;Saint-Étienne | 2&nbsp;semaines, Saint-Étienne&nbsp;(42)
+                Doléances – Biennale internationale du&nbsp;design de&nbsp;Saint-Étienne | 2&nbsp;semaines, Saint-Étienne&nbsp;(42)
                 <br class="after-space">
                 <span class="bold-text">2024 | Graphiste • Exposante • Médiatrice</span>
                 <br>
-                Éditions ++ – Salon Page(s) | 3&nbsp;semaines, Paris&nbsp;(75)
+                in(vie)sible – Salon Page(s) | 3&nbsp;semaines, Paris&nbsp;(75)
                 <br class="after-space">
                 <span class="bold-text">2024 | Graphiste</span>
                 <br>
@@ -86,7 +86,7 @@
                 <br class="after-space">
                 <span class="bold-text">2024 | Graphiste • Exposante • Médiatrice</span>
                 <br>
-                FLV Lab – Fondation Louis Vuitton | 4&nbsp;mois, Paris&nbsp;(75)
+                L'embarcadère – Fondation Louis Vuitton | 4&nbsp;mois, Paris&nbsp;(75)
                 <br class="after-space">
                 <span class="bold-text">2022 | Assistante • Relieuse</span>
                 <br>
