--- a/infos.html
+++ b/infos.html
@@ -74,7 +74,7 @@
                 <br class="after-space">
                 <span class="bold-text">2025 | Graphiste • Exposante</span>
                 <br>
-                Doléances – Biennale internationale du&nbsp;design de Saint-Étienne | Saint-Étienne&nbsp;(42)
+                Doléances – Biennale internationale du&nbsp;design de&nbsp;Saint-Étienne | Saint-Étienne&nbsp;(42)
                 <br class="after-space">
                 <span class="bold-text">2024 | Graphiste • Exposante • Médiatrice</span>
                 <br>
@@ -114,4 +114,5 @@
     </section>
 </body>
 </html>
+
 
