--- a/infos.html
+++ b/infos.html
@@ -54,15 +54,15 @@
             <p>
                 <span class="bold-text">2026 | Post-Diplôme Digital Média Lab</span>
                 <br>
-                EPSAA&nbsp;(94)
+                EPSAA&nbsp; – Ivry-sur-Seine (94)
                 <br class="after-space">
                 <span class="bold-text">2025 | DSAA Design graphique Narration multimédia</span>
                 <br>
-                École Jacques Prévert - Boulogne-Billancourt&nbsp;(92)
+                École Jacques Prévert – Boulogne-Billancourt&nbsp;(92)
                 <br class="after-space">
                 <span class="bold-text">2023 | DNMADe Design graphique option édition</span>
                 <br>
-                École Léonard-de-Vinci - Montaigu&nbsp;(85)
+                École Léonard-de-Vinci – Montaigu&nbsp;(85)
             </p>
         </article>
         <article>
@@ -74,7 +74,7 @@
                 <br class="after-space">
                 <span class="bold-text">2025 | Graphiste • Exposante</span>
                 <br>
-                Doléances – Biennale internationale du&nbsp;design de&nbsp;Saint-Étienne | Saint-Étienne&nbsp;(42)
+                Doléances – Biennale internationale du&nbsp;design de&nbsp;Saint-Étienne| Saint-Étienne&nbsp;(42)
                 <br class="after-space">
                 <span class="bold-text">2024 | Graphiste • Exposante • Médiatrice</span>
                 <br>
@@ -114,5 +114,3 @@
     </section>
 </body>
 </html>
-
-
