--- a/infos.html
+++ b/infos.html
@@ -54,7 +54,7 @@
             <p>
                 <span class="bold-text">2026 | Post-Diplôme Digital Média Lab</span>
                 <br>
-                EPSAA&nbsp; – Ivry-sur-Seine (94)
+                EPSAA – Ivry-sur-Seine (94)
                 <br class="after-space">
                 <span class="bold-text">2025 | DSAA Design graphique Narration multimédia</span>
                 <br>
@@ -114,3 +114,4 @@
     </section>
 </body>
 </html>
+
