--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="author" content="Manon Hoarau">
     <meta name="description" content="Personal website">
     <meta name="keywords" content="Design, Graphic design, Design graphique, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
-    <title>Manon Hoarau</title>
-    <link rel="icon" type="image/x-icon" href="">
+    <title>Manon Hoarau – Accueil</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -54,22 +54,22 @@
     </header>
     <main id="gallery-and-filters-container">
         <section id="gallery">
-            <a href="projects/decisions.html" class="filter to-project" data-name="webdesign">
+            <a href="projects/decisions.html" class="image-color-filter to-project" data-name="webdesign">
                 <img src="images/decisions_01.jpg" class="image-in-gallery">
             </a>
-            <a href="projects/totem.html" class="filter to-project" data-name="edition">
+            <a href="projects/totem.html" class="image-color-filter to-project" data-name="edition">
                 <img src="images/totem_02.jpg" class="image-in-gallery">
             </a>
-            <a href="projects/flv.html" class="filter to-project" data-name="objet">
+            <a href="projects/flv.html" class="image-color-filter to-project" data-name="objet">
                 <img src="images/flv_01.jpg" class="image-in-gallery">
             </a>
-            <a href="projects/project.html" class="filter to-project" data-name="illustration">
+            <a href="projects/project.html" class="image-color-filter to-project" data-name="illustration">
                 <img src="images/placeholder.jpg" class="image-in-gallery">
             </a>
         </section>
         <aside>
-            <p id="filters">
-                <a class="active" data-name="all">tout</a>
+            <p id="project-filters">
+                <a class="active-project-filter" data-name="all">tout</a>
                 <a data-name="edition">édition</a>
                 <a data-name="webdesign">webdesign</a>
                 <a data-name="illustration">illustration</a>
