--- a/projects/totem.html
+++ b/projects/totem.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Manon Hoarau">
+    <meta name="description" content="Personal website">
+    <meta name="keywords" content="Design, Graphic design, Design graphique, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
     <title>Manon Hoarau – Le guide ultime de la photo réussie</title>
-    <link rel="icon" type="image/x-icon" href="">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body class="project-page">
