--- a/infos.html
+++ b/infos.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manon Hoarau</title>
-    <link rel="icon" type="image/x-icon" href="">
+    <meta name="author" content="Manon Hoarau">
+    <meta name="description" content="Personal website">
+    <meta name="keywords" content="Design, Graphic design, Design graphique, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
+    <title>Manon Hoarau – Infos</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -48,7 +51,7 @@
         </div>
         <hr>
     </header>
-    <section id="infos-container">
+    <main id="infos-container">
         <article>
             <h2>Formation</h2>
             <p>
@@ -74,7 +77,7 @@
                 <br class="after-space">
                 <span class="bold-text">2025 | Graphiste • Exposante</span>
                 <br>
-                Doléances – Biennale internationale du&nbsp;design de&nbsp;Saint-Étienne | Saint-Étienne&nbsp;(42)
+                Doléances – Biennale internationale du&nbsp;design | Saint-Étienne&nbsp;(42)
                 <br class="after-space">
                 <span class="bold-text">2024 | Graphiste • Exposante • Médiatrice</span>
                 <br>
@@ -106,13 +109,19 @@
             <p>
                 <span class="wingdings">- </span>Issy-les-Moulineaux&nbsp;(92)
                 <br>
-                <span class="wingdings">* </span><a href="mailto:manon.hoarau.amacv@gmail.com" class="link">manon.hoarau.amacv@gmail.com</a>
+                <span class="wingdings">* </span><a href="mailto:manon.hoarau.amacv@gmail.com" class="infos-link">manon.hoarau.amacv@gmail.com</a>
                 <br>
                 <span class="wingdings2">' </span>+33&#8201;6&#8201;45&#8201;37&#8201;01&#8201;53
             </p>
+            <div id="outside-links">
+                <a href="https://drive.google.com/file/d/1d8Gypq_hkTmXzwjb1SgPBxqcdtC__D3T/view?usp=sharing" target="_blank" class="infos-link"><span class="wingdings2">E</span> Cv</a>
+                <a href="https://www.linkedin.com/in/manon-hoarau/" target="_blank" class="infos-link"><span class="wingdings2">E</span> LinkedIn</a>
+                <a href="https://www.instagram.com/inarainytown/" target="_blank" class="infos-link"><span class="wingdings2">E</span> Instagram (illu)</a>
+            </div>
         </article>
-    </section>
+    </main>
+    <footer id="footer" class="italic-text">
+        Manon Hoarau 2025. Tous droits réservés.
+    </footer>
 </body>
 </html>
-
-
