--- a/infos.html
+++ b/infos.html
@@ -113,11 +113,11 @@
                 <br>
                 <span class="wingdings2">' </span>+33&#8201;6&#8201;45&#8201;37&#8201;01&#8201;53
             </p>
-            <div id="outside-links">
-                <a href="https://drive.google.com/file/d/1d8Gypq_hkTmXzwjb1SgPBxqcdtC__D3T/view?usp=sharing" target="_blank" class="infos-link"><span class="wingdings2">E</span> Cv</a>
-                <a href="https://www.linkedin.com/in/manon-hoarau/" target="_blank" class="infos-link"><span class="wingdings2">E</span> LinkedIn</a>
-                <a href="https://www.instagram.com/inarainytown/" target="_blank" class="infos-link"><span class="wingdings2">E</span> Instagram (illu)</a>
-            </div>
+            <p id="outside-links">
+                <span class="wingdings2">E </span><a href="https://drive.google.com/file/d/1d8Gypq_hkTmXzwjb1SgPBxqcdtC__D3T/view?usp=sharing" target="_blank" class="infos-link">Cv</a>
+                <span class="wingdings2">E </span><a href="https://www.linkedin.com/in/manon-hoarau/" target="_blank" class="infos-link">LinkedIn</a>
+                <span class="wingdings2">E </span><a href="https://www.instagram.com/inarainytown/" target="_blank" class="infos-link">Instagram (illu)</a>
+            </p>
         </article>
     </main>
     <footer id="footer" class="italic-text">
