--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@
     </header>
     <main id="gallery-and-filters-container">
         <section id="gallery">
+            <a href="projects/design_sonore.html" class="image-color-filter to-project" data-name="son">
+                <img src="images/aperçus/design_sonore.jpg" class="image-in-gallery">
+            </a>
+            <a href="projects/touch_designer.html" class="image-color-filter image-invert-filter to-project" data-name="video">
+                <img src="images/aperçus/touch_designer.jpg" class="image-in-gallery">
+            </a>
+            <a href="projects/motion_super_low_pixel.html" class="image-color-filter to-project" data-name="video">
+                <img src="images/aperçus/motion_super_low_pixel.jpg" class="image-in-gallery">
+            </a>
+            <a href="projects/nikon_film_fest.html" class="image-color-filter to-project" data-name="video">
+                <img src="images/aperçus/nikon_film_fest.jpg" class="image-in-gallery">
+            </a>
+            <a href="projects/application.html" class="image-color-filter to-project" data-name="webdesign">
+                <img src="images/aperçus/application.jpg" class="image-in-gallery">
+            </a>
+            <a href="projects/blender.html" class="image-color-filter to-project" data-name="3d">
+                <img src="images/aperçus/blender.png" class="image-in-gallery">
+            </a>
             <a href="projects/decisions.html" class="image-color-filter to-project" data-name="webdesign">
                 <img src="images/decisions_01.jpg" class="image-in-gallery">
             </a>
@@ -63,7 +81,7 @@
             <a href="projects/flv.html" class="image-color-filter to-project" data-name="objet">
                 <img src="images/flv_01.jpg" class="image-in-gallery">
             </a>
-            <a href="projects/project.html" class="image-color-filter to-project" data-name="illustration">
+            <a href="projects/project.html" class="image-color-filter to-project">
                 <img src="images/placeholder.jpg" class="image-in-gallery">
             </a>
         </section>
@@ -72,8 +90,10 @@
                 <a class="active-project-filter" data-name="all">tout</a>
                 <a data-name="edition">édition</a>
                 <a data-name="webdesign">webdesign</a>
-                <a data-name="illustration">illustration</a>
+                <a data-name="3d">3D</a>
+                <a data-name="video">vidéo</a>
                 <a data-name="objet">objet</a>
+                <a data-name="son">son</a>
             </p>
         </aside>
     </main>
